--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,6 @@
                 }'>
         </script>
     </head>
-    <body>
-        <div>Olá Camarada</div>
+    <body class="sapUiBody" id="content">
     </body>
 </html>
